--- a/stable/iine-grp/templates/ingress.yaml
+++ b/stable/iine-grp/templates/ingress.yaml
@@ -1,3 +1,5 @@
+{{- $root := . -}}
+
 {{- if .Values.ingress.enabled -}}
 {{- $fullName := include "iine-grp.fullname" . -}}
 apiVersion: extensions/v1beta1
@@ -26,11 +28,17 @@ spec:
     - host: {{ .host | quote }}
       http:
         paths:
-        {{- range .paths }}
-          - path: {{ . }}
-            backend:
-              serviceName: {{ $fullName }}
-              servicePort: http
-        {{- end }}
+        - path: /
+          backend:
+            serviceName: {{ include "iine-grp.web.fullname" $root }}
+            servicePort: 80
+        - path: /oauth
+          backend:
+            serviceName: {{ include "iine-grp.api.fullname" $root }}
+            servicePort: 80
+        - path: /api
+          backend:
+            serviceName: {{ include "iine-grp.api.fullname" $root }}
+            servicePort: 80
   {{- end }}
 {{- end }}
